git push 1:30pm

--- a/ClassConnect.css
+++ b/ClassConnect.css
@@ -9,7 +9,7 @@ margin-right:25px;}
 .dataContainer {margin-left:100px;
 margin-right:100px;}
 
-.jumbotron{background-color: #0E334A;
+.jumbotron{background-color: #290333;
 color:#F0C57E;
 border-color:#EBB651;
 text-align: center;
