--- a/ClassConnect.css
+++ b/ClassConnect.css
@@ -1,144 +1,161 @@
-.masterContainer{text-align: center;
-    background-color:#696969 ;
-    font-family: 'PT Sans', sans-serif;
-    background-color: #696969 ;}
+.masterContainer
+   {text-align: center;
+   background-color:#696969 ;
+   font-family: 'PT Sans', sans-serif;}
 
-.data{margin:25px;}
+.studentIntro
+   {font-size: 20px;
+   color:#A9A9A9 ;}
 
-.reset{background-color: #A9A9A9 ;
-margin:0px;
-margin-bottom:25px;
-border-color:#808080 ;
-color:black;
-border-width: 5px}
+.instructions
+   {font-size: 12px;
+   color:#A9A9A9 ;}
 
-.reset:hover{background-color: #BD280E ;
-border-color:black;}
+.instructions2
+   {font-size: 14px;
+   color:#696969 ;}
 
-.jumbotron{
-    background-color: #A9A9A9 ;
-    color:#F8CF5D ;
-    border-color:#808080 ;
-    font-size:75px;
-    border-style: solid;
-    border-width: 5px;
-    text-align: center;
-    text-shadow: #000000 0px 0px 20px;
-    height:150px;
-    padding: 25px;}
+.row
+   {margin:0px;}
 
-.stats{text-align:center;}
+.reset
+   {background-color: #A9A9A9 ;
+   margin-bottom:25px;
+   border-color:#808080 ;
+   color:black;
+   border-width: 5px;}
 
-.statsBox{
-    border-width: 1px;
-    border-style: solid;
-    border-color: #696969 ;
-    font-weight: bold;
-    font-size: 20px;
-margin-bottom: 25px;
-padding:0px;
-padding-top: 20px;
-padding-bottom:20px;}
+.reset:hover
+   {background-color: #BD280E ;
+   border-color:black;}
 
-.statsBar{
-    background-color: #A9A9A9 ;
-    border-width: 5px;
-    border-style: solid;
-    border-color: #BD280E ;
-    text-align: center;
-    padding:0px;
-    margin:0px;
-    margin-top: 25px;
+.jumbotron
+   {background-color: #A9A9A9 ;
+   color:#F8CF5D ;
+   border-color:#808080 ;
+   font-size:75px;
+   border-style: solid;
+   border-width: 5px;
+   text-align: center;
+   text-shadow: #000000 0px 0px 20px;
+   height:175px;
+   padding-top: 10px;
+   padding-bottom:30px;}
+
+.statsBox
+   {border-width: 1px;
+   border-style: solid;
+   border-color: #696969 ;
+   font-weight: bold;
+   font-size: 20px;
+   margin:10px;}
+
+.statsBar
+   {background-color: #A9A9A9 ;
+   border-width: 5px;
+   border-style: solid;
+   border-color: #BD280E ;
+   padding:0px;
+   margin-left:25px;
+   width:30%;
+   height:300px;}
+
+.classStatsHeader
+   {color:#BD280E ;
+   font-size: 30px;
+   text-shadow: #000000 0px 0px 2px;}
+
+.lineGraph
+   {background-color: #A9A9A9 ;
+   padding:0px;
+   height: 300px;
+   border-width: 5px;
+   border-style: solid;
+   border-color: #B94E12 ;}
+
+.questionsLiveFormat
+   {background-color: #A9A9A9 ;
+   height:200px;
+   border-width: 5px;
+   border-style: solid;
+   border-color: #F8CF5D ;
+   font-weight: bold;
+   overflow-y: scroll;
+   margin-top:25px;}
+
+.questionsLiveFeedHeader
+   {color:#F8CF5D ;
+   font-size: 30px;
+   text-shadow: #000000 0px 0px 2px;}
+
+
+.rawDataFeedFormat
+   {background-color: #A9A9A9 ;
+   height:200px;
+   border-width: 5px;
+   border-style: solid;
+   border-color: #44910A ;
+   font-weight: bold;
+   overflow-y: scroll;
+   margin-top:25px;}
+
+.rawDataFeedHeader
+   {color:#44910A ;
+   font-size: 30px;
+   text-shadow: #000000 0px 0px 2px;}
+
+
+.entry
+   {width:225px;
+   height:60px;
+   float:left;
+   font-weight: bolder;
+   margin-left: 0px;
+   margin-right: 0px;
+   border-color: #000000 ;
+   clear:both;
+   font-size:18px;
+   white-space: normal;}
+
+.buttonRow
+   {text-align:center;
+   margin:0px;
+   margin-top:50px;
+   display: inline-block;}
+
+.questionRow
+   {margin-top:50px;
+   margin-left:auto;
+   margin-right:auto;
+   margin-top:0px;
+   background-color: #696969 ;}
+
+.submitQuestionButton
+   {background-color-color:#808080 ;
+   height:100px;
+   width:125px;
+   margin: 0px;
+   margin-top:50px;
+   border-color:#F8CF5D ;
+   border-style:solid;
+   border-width: 5px;
+   text-align: center;}
+
+.textEntry:focus
+   {border-color:#44910A ;}
+
+.textEntry
+   {background-color: #696969 ;
+   margin:0px;
+   margin-top:50px;
+   margin-bottom: 100px;
+   height:100px;
+   border-color:#F8CF5D ;
+   border-style:solid;
+   border-width: 5px;
+   text-align: center;
+   color: black;
 }
-
-
-
-
-.classStatsHeader{color:#BD280E ;
-font-size: 30px;
-text-shadow: #000000 0px 0px 2px;}
-
-.lineGraph{background-color: #A9A9A9 ;
-height: 300px;
-border-width: 5px;
-border-style: solid;
-border-color: #B94E12 ;}
-
-.questionsLiveFormat{background-color: #A9A9A9 ;
-height:100px;
-border-width: 5px;
-border-style: solid;
-border-color: #F8CF5D ;
-font-weight: bold;
-overflow-y: scroll;
-padding:0px;}
-
-.questionsLiveFeedHeader{color:#F8CF5D ;
-font-size: 30px;
-text-shadow: #000000 0px 0px 2px;
-padding:0px;}
-
-
-.rawDataFeedFormat{background-color: #A9A9A9 ;
-height:200px;
-border-width: 5px;
-border-style: solid;
-border-color: #9AA81A ;
-font-weight: bold;
-overflow-y: scroll;
-padding:0px;
-}
-
-.rawDataFeedHeader{color:#9AA81A ;
-font-size: 30px;
-text-shadow: #000000 0px 0px 2px;}
-
-
-.entry{width:225px;
-    height:60px;
-    float:left;
-    margin-left: 0px;
-    margin-right: 0px;
-    border-color: #000000 ;
-    clear:both;
-    font-size:14px;
-     white-space: normal;}
-
-
-.buttonRow{text-align:center;
-margin:0px;
-margin-top:50px;
-display: inline-block;}
- 
-.questionRow{margin-top:50px;
-margin-left:auto;
-margin-right:auto;
-margin-top:0px;
-background-color: #696969 ;}
-
-.submitQuestionButton{
-background-color-color:#808080 ;
-height:100px;
-width:125px;
-margin: 0px;
-margin-top:50px;
-border-color:#F8CF5D ;
-border-style:solid;
-border-width: 5px;
-text-align: center;}
-
-.textEntry:focus{border-color:#44910A ;}
-
-.textEntry{
-background-color: #696969 ;
-margin:0px;
-margin-top:50px;
-margin-bottom: 100px;
-height:100px;
-border-color:#F8CF5D ;
-border-style:solid;
-border-width: 5px;
-text-align: center;}
 
 .btn1{background-color:#BD280E ; clear:left;}
 .btn2{background-color:#B94E12 ; clear:right;}
