--- a/ClassConnect.css
+++ b/ClassConnect.css
@@ -3,7 +3,7 @@
    background-color:#696969 ;
    font-family: 'PT Sans', sans-serif;}
 
-.studentIntro
+.ratingIntro
    {font-size: 20px;
    color:#A9A9A9 ;}
 
